WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
20302
Wrong signbit implementation for solaris platform
https://bugs.webkit.org/show_bug.cgi?id=20302
Summary
Wrong signbit implementation for solaris platform
Alexey Ushakov
Reported
2008-08-06 07:51:20 PDT
Solaris platform has incomplete implementation for signbit finction in JavaScriptCore/wtf/MathExtras.h. Here is correct implementation of this function: inline bool signbit(double num) { return copysign(1.0, num) < 0; }
Attachments
signbit patch for solaris platform
(459 bytes, patch)
2008-08-06 07:54 PDT
,
Alexey Ushakov
no flags
Details
Formatted Diff
Diff
Proposed patch which compiles correctly in qt-4.7.1 with webkit enabled on Solaris 10 with SS12 C++ compiler
(1.09 KB, patch)
2011-03-24 09:48 PDT
,
Ben Taylor
darin
: review+
darin
: commit-queue+
Details
Formatted Diff
Diff
Updated patch which compiles correctly in qt-4.7.1 with webkit enabled on Solaris 10 with SS12 C++ compiler, fixed variable "num" to be "x"
(1.08 KB, patch)
2011-03-24 10:12 PDT
,
Ben Taylor
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alexey Ushakov
Comment 1
2008-08-06 07:54:33 PDT
Created
attachment 22680
[details]
signbit patch for solaris platform
Ben Taylor
Comment 2
2011-03-24 09:48:48 PDT
Created
attachment 86785
[details]
Proposed patch which compiles correctly in qt-4.7.1 with webkit enabled on Solaris 10 with SS12 C++ compiler Add a correct patch that includes a ChangeLog and proper patch using the webkit tools. This was done against webkit head and compiles correctly on Solaris 10/SS12 against qt-4.7.1
Darin Adler
Comment 3
2011-03-24 09:53:43 PDT
Comment on
attachment 86785
[details]
Proposed patch which compiles correctly in qt-4.7.1 with webkit enabled on Solaris 10 with SS12 C++ compiler View in context:
https://bugs.webkit.org/attachment.cgi?id=86785&action=review
> Source/JavaScriptCore/wtf/MathExtras.h:93 > -inline bool signbit(double x) { return x < 0.0; } // FIXME: Wrong for negative 0. > +inline bool signbit(double num) { return copysign(1.0, num) < 0; }
I guess you copied the version from MSVC, which is why the variable name is now num. I would prefer that this file use "x" more consistently or use a word like "number" rather than "num".
Ben Taylor
Comment 4
2011-03-24 10:12:06 PDT
Created
attachment 86789
[details]
Updated patch which compiles correctly in qt-4.7.1 with webkit enabled on Solaris 10 with SS12 C++ compiler, fixed variable "num" to be "x" Updated patch per request
WebKit Commit Bot
Comment 5
2011-03-24 12:14:25 PDT
Comment on
attachment 86789
[details]
Updated patch which compiles correctly in qt-4.7.1 with webkit enabled on Solaris 10 with SS12 C++ compiler, fixed variable "num" to be "x" Clearing flags on attachment: 86789 Committed
r81882
: <
http://trac.webkit.org/changeset/81882
>
WebKit Commit Bot
Comment 6
2011-03-24 12:14:29 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 7
2011-03-24 13:12:05 PDT
http://trac.webkit.org/changeset/81882
might have broken Qt Linux Release The following tests are not passing: editing/pasteboard/5065605.html editing/pasteboard/display-block-on-spans.html editing/pasteboard/paste-text-011.html editing/pasteboard/paste-text-at-tabspan-002.html
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug