2011-03-24  Ben Taylor  <bentaylor.solx86@gmail.com>

Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=20302
        Correct implementation of signbit on Solaris

        * wtf/MathExtras.h:
        (signbit):

Canonical link: https://commits.webkit.org/71696@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@81882 268f45cc-cd09-0410-ab3c-d52691b4dbfc